<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:fitsSystemWindows="true">

    <ImageView
        android:id="@+id/new_student_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/student_avatar"
        android:contentDescription="@string/student_profile_picture_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/new_student_name_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_name"
        android:inputType="textPersonName"
        android:autofillHints="personName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/new_student_image" />

    <EditText
        android:id="@+id/new_student_id_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="ID"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/new_student_name_et" />

    <EditText
        android:id="@+id/new_student_phone_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_phone"
        android:inputType="phone"
        android:autofillHints="phoneNumber"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/new_student_id_et" />

    <EditText
        android:id="@+id/new_student_address_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_address"
        android:inputType="textPostalAddress"
        android:autofillHints="postalAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/new_student_phone_et" />

    <Button
        android:id="@+id/new_student_save_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/new_student_cancel_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>