<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp">

    <ImageView
        android:id="@+id/student_row_image"
        android:layout_width="59dp"
        android:layout_height="60dp"
        android:src="@drawable/student_avatar"
        android:contentDescription="@string/student_profile_picture_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/student_row_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/student_name_placeholder"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/student_row_check"
        app:layout_constraintStart_toEndOf="@+id/student_row_image"
        app:layout_constraintTop_toTopOf="@+id/student_row_image" />

    <TextView
        android:id="@+id/student_row_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/student_id_placeholder"
        app:layout_constraintEnd_toEndOf="@+id/student_row_name"
        app:layout_constraintStart_toStartOf="@+id/student_row_name"
        app:layout_constraintTop_toBottomOf="@+id/student_row_name" />

    <CheckBox
        android:id="@+id/student_row_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>